# telebot_hirakata

./: .gitignore  Cargo.toml  kotoba.json  numbers.json  setting.json  time.json
src/: api.rs  lib.rs  main.rs  message.rs
src/file/: hiragana.json  hiragana_moji.json  katakana_moji.json
