[package]
name = "telebot_hirakata"
version = "0.1.0"
edition = "2024"

[dependencies]
teloxide = { version = "0.16.0", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.5"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.9.0"
urlencoding = "2.1.3"
reqwest = { version = "0.11", features = ["json"] }
